--- a/style.css
+++ b/style.css
@@ -8,4 +8,9 @@
 header {
     background-image: url(./imagens/bg-mobile.lnk);
     background-size:cover;
+    height: 8.375rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
