primeiros ajustes do desktop

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 header {
     background-image: url(./imagens/bg-mobile.lnk);
-    background-size:cover;
+    background-size: cover;
     height: 8.375rem;
 
     display: flex;
@@ -26,8 +26,8 @@ header {
     margin-bottom: 3.7rem;
 }
 
-main{
-    padding-inline: 1.5rem ;
+main {
+    padding-inline: 1.5rem;
 }
 
 .descricao {
@@ -36,25 +36,25 @@ main{
 
 .descricao h1 {
     color: var(--gray-800);
-    margin-bottom:1rem ;
+    margin-bottom: 1rem;
     font-size: 1.5625rem;
 }
 
 .descricao p {
     font-size: 0.8125rem;
-    color:var(--gray-680);
+    color: var(--gray-680);
 }
 
 .input-box {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem ;
+    gap: 0.5rem;
     margin-bottom: 1rem;
 }
 
 .input-box div {
     display: flex;
-    justify-content:space-between ;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -90,7 +90,7 @@ main{
 }
 
 .login a :hover {
-    text-decoration:underline ;
+    text-decoration: underline;
 }
 
 .login button {
@@ -101,17 +101,33 @@ main{
     background: var(--purple);
     border: none;
     border-radius: 0.25rem;
-    
+
     font-size: 1rem;
     font-weight: 700;
     color: var(--white);
 }
 
-.login > p {
+.login>p {
     color: var(--gray-680);
 }
 
-.login > p a {
-    font-weight:700 ;
+.login>p a {
+    font-weight: 700;
     font-size: 1rem;
+}
+
+@media (min-width: 1000px) {
+    header {
+        background: none;
+        justify-content: flex-start;
+        padding-inline: 7rem;
+    }
+
+    header img {
+        width: 10rem;
+    }
+
+    main {
+        padding-inline: 7rem;
+    }
 }
